packages/dartcv/src/core/mat.h

/**
 * @brief Create Mat with specified sizes and type
 *
 * @param sizes array of integers, each describing a dimension
 * @param type type of the created matrix
 * @param rval Mat*
 * @return CvStatus
 */
CvStatus* cv_Mat_create_2(VecI32 sizes, int type, Mat* rval, CvCallback_0 callback);
/**
 * @brief Create Mat with specified sizes and type
 *
 * @param sizes array of integers, each describing a dimension
 * @param type type of the created matrix
 * @param ar array of values to initialize the matrix with
 * @param rval Mat*
 * @return CvStatus
 */
CvStatus* cv_Mat_create_3(VecI32 sizes, int type, Scalar ar, Mat* rval, CvCallback_0 callback);
/**
 * @brief Create Mat with specified sizes, type and data buffer
 *
 * @param sizes array of integers, each describing a dimension
 * @param type type of the created matrix
 * @param buf buffer to initialize the matrix with, will be copied
 * @param rval Mat*
 * @return CvStatus
 */
CvStatus* cv_Mat_create_4(VecI32 sizes, int type, void* buf, Mat* rval, CvCallback_0 callback);
/**
 * @brief Create Mat with Scalar values
 *
 * @param scalar array of values to initialize the matrix with
 * @param rows number of rows
 * @param cols number of columns
 * @param type type of the created matrix
 * @param rval Mat*
 * @return CvStatus
 */
CvStatus* cv_Mat_create_5(
    const Scalar scalar, int rows, int cols, int type, Mat* rval, CvCallback_0 callback
);
/**
 * @brief Create Mat with rows, cols, type and data buffer
 *
 * @param sizes array of integers, each describing a dimension
 * @param type type of the created matrix
 * @param buf buffer to initialize the matrix with, will be copied
 * @param rval Mat*
 * @return CvStatus
 */
CvStatus* cv_Mat_create_6(
    int rows, int cols, int type, void* buf, Mat* rval, CvCallback_0 callback
);
/**
 * @brief Create Mat with specified vector of points
 *
 * @param vec array of points
 * @param rval Mat*
 * @return CvStatus
 */
CvStatus* cv_Mat_create_7(VecPoint vec, Mat* rval, CvCallback_0 callback);
CvStatus* cv_Mat_create_8(VecPoint2f vec, Mat* rval, CvCallback_0 callback);
CvStatus* cv_Mat_create_9(VecPoint3f vec, Mat* rval, CvCallback_0 callback);
CvStatus* cv_Mat_eye(int rows, int cols, int type, Mat* rval, CvCallback_0 callback);
int cv_Mat_flags(Mat self);
bool cv_Mat_empty(Mat self);
size_t cv_Mat_elemSize(Mat self);
size_t cv_Mat_elemSize1(Mat self);
int cv_Mat_dims(Mat self);
uchar* cv_Mat_data(Mat self);
Vec2b* cv_Mat_get_Vec2b(Mat self, int i0, int i1);
Vec3b* cv_Mat_get_Vec3b(Mat self, int i0, int i1);
Vec2s* cv_Mat_get_Vec2s(Mat self, int i0, int i1);
Vec2w* cv_Mat_get_Vec2w(Mat self, int i0, int i1);
Vec2i* cv_Mat_get_Vec2i(Mat self, int i0, int i1);
Vec2f* cv_Mat_get_Vec2f(Mat self, int i0, int i1);
Vec2d* cv_Mat_get_Vec2d(Mat self, int i0, int i1);