packages/dartcv/lib/src/g/core.g.dart


  /// @brief Create Mat with specified sizes and type
  ///
  /// @param sizes array of integers, each describing a dimension
  /// @param type type of the created matrix
  /// @param rval Mat*
  /// @return CvStatus
  ffi.Pointer<CvStatus> cv_Mat_create_2(
    VecI32 sizes,
    int type,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_create_2(
      sizes,
      type,
      rval,
      callback,
    );
  }

  late final _cv_Mat_create_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecI32, ffi.Int, ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_create_2');
  late final _cv_Mat_create_2 = _cv_Mat_create_2Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecI32, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  /// @brief Create Mat with specified sizes and type
  ///
  /// @param sizes array of integers, each describing a dimension
  /// @param type type of the created matrix
  /// @param ar array of values to initialize the matrix with
  /// @param rval Mat*
  /// @return CvStatus
  ffi.Pointer<CvStatus> cv_Mat_create_3(
    VecI32 sizes,
    int type,
    Scalar ar,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_create_3(
      sizes,
      type,
      ar,
      rval,
      callback,
    );
  }

  late final _cv_Mat_create_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecI32, ffi.Int, Scalar,
              ffi.Pointer<Mat>, imp1.CvCallback_0)>>('cv_Mat_create_3');
  late final _cv_Mat_create_3 = _cv_Mat_create_3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecI32, int, Scalar, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  /// @brief Create Mat with specified sizes, type and data buffer
  ///
  /// @param sizes array of integers, each describing a dimension
  /// @param type type of the created matrix
  /// @param buf buffer to initialize the matrix with, will be copied
  /// @param rval Mat*
  /// @return CvStatus
  ffi.Pointer<CvStatus> cv_Mat_create_4(
    VecI32 sizes,
    int type,
    ffi.Pointer<ffi.Void> buf,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_create_4(
      sizes,
      type,
      buf,
      rval,
      callback,
    );
  }

  late final _cv_Mat_create_4Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecI32, ffi.Int, ffi.Pointer<ffi.Void>,
              ffi.Pointer<Mat>, imp1.CvCallback_0)>>('cv_Mat_create_4');
  late final _cv_Mat_create_4 = _cv_Mat_create_4Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(VecI32, int, ffi.Pointer<ffi.Void>,
          ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  /// @brief Create Mat with Scalar values
  ///
  /// @param ar array of values to initialize the matrix with
  /// @param rows number of rows
  /// @param cols number of columns
  /// @param type type of the created matrix
  /// @param rval Mat*
  /// @return CvStatus
  ffi.Pointer<CvStatus> cv_Mat_create_5(
    Scalar ar,
    int rows,
    int cols,
    int type,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_create_5(
      ar,
      rows,
      cols,
      type,
      rval,
      callback,
    );
  }

  late final _cv_Mat_create_5Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Scalar, ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<Mat>, imp1.CvCallback_0)>>('cv_Mat_create_5');
  late final _cv_Mat_create_5 = _cv_Mat_create_5Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Scalar, int, int, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  /// @brief Create Mat with rows, cols, type and data buffer
  ///
  /// @param sizes array of integers, each describing a dimension
  /// @param type type of the created matrix
  /// @param buf buffer to initialize the matrix with, will be copied
  /// @param rval Mat*
  /// @return CvStatus
  ffi.Pointer<CvStatus> cv_Mat_create_6(
    int rows,
    int cols,
    int type,
    ffi.Pointer<ffi.Void> buf,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_create_6(
      rows,
      cols,
      type,
      buf,
      rval,
      callback,
    );
  }

  late final _cv_Mat_create_6Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_create_6');
  late final _cv_Mat_create_6 = _cv_Mat_create_6Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(int, int, int, ffi.Pointer<ffi.Void>,
          ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  /// @brief Create Mat with specified vector of points
  ///
  /// @param vec array of points
  /// @param rval Mat*
  /// @return CvStatus
  ffi.Pointer<CvStatus> cv_Mat_create_7(
    VecPoint vec,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_create_7(
      vec,
      rval,
      callback,
    );
  }

  late final _cv_Mat_create_7Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_create_7');
  late final _cv_Mat_create_7 = _cv_Mat_create_7Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_create_8(
    VecPoint2f vec,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_create_8(
      vec,
      rval,
      callback,
    );
  }

  late final _cv_Mat_create_8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint2f, ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_create_8');
  late final _cv_Mat_create_8 = _cv_Mat_create_8Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint2f, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_create_9(
    VecPoint3f vec,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_create_9(
      vec,
      rval,
      callback,
    );
  }

  late final _cv_Mat_create_9Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint3f, ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_Mat_create_9');
  late final _cv_Mat_create_9 = _cv_Mat_create_9Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint3f, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<imp1.uchar> cv_Mat_data(
    Mat self,
  ) {
    return _cv_Mat_data(
      self,
    );
  }

  late final _cv_Mat_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<imp1.uchar> Function(Mat)>>(
          'cv_Mat_data');
  late final _cv_Mat_data = _cv_Mat_dataPtr
      .asFunction<ffi.Pointer<imp1.uchar> Function(Mat)>(isLeaf: true);

  int cv_Mat_dims(
    Mat self,
  ) {
    return _cv_Mat_dims(
      self,
    );
  }

  late final _cv_Mat_dimsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(Mat)>>('cv_Mat_dims');
  late final _cv_Mat_dims =
      _cv_Mat_dimsPtr.asFunction<int Function(Mat)>(isLeaf: true);

  int cv_Mat_elemSize(
    Mat self,
  ) {
    return _cv_Mat_elemSize(
      self,
    );
  }

  late final _cv_Mat_elemSizePtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(Mat)>>('cv_Mat_elemSize');
  late final _cv_Mat_elemSize =
      _cv_Mat_elemSizePtr.asFunction<int Function(Mat)>(isLeaf: true);

  int cv_Mat_elemSize1(
    Mat self,
  ) {
    return _cv_Mat_elemSize1(
      self,
    );
  }

  late final _cv_Mat_elemSize1Ptr =
      _lookup<ffi.NativeFunction<ffi.Size Function(Mat)>>('cv_Mat_elemSize1');
  late final _cv_Mat_elemSize1 =
      _cv_Mat_elemSize1Ptr.asFunction<int Function(Mat)>(isLeaf: true);

  bool cv_Mat_empty(
    Mat self,
  ) {
    return _cv_Mat_empty(
      self,
    );
  }

  late final _cv_Mat_emptyPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Mat)>>('cv_Mat_empty');
  late final _cv_Mat_empty = _cv_Mat_emptyPtr.asFunction<bool Function(Mat)>();

  ffi.Pointer<CvStatus> cv_Mat_eye(
    int rows,
    int cols,
    int type,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_eye(
      rows,
      cols,
      type,
      rval,
      callback,
    );
  }

  late final _cv_Mat_eyePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<Mat>, imp1.CvCallback_0)>>('cv_Mat_eye');
  late final _cv_Mat_eye = _cv_Mat_eyePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          int, int, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  int cv_Mat_flags(
    Mat self,
  ) {
    return _cv_Mat_flags(
      self,
    );
  }

  late final _cv_Mat_flagsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(Mat)>>('cv_Mat_flags');
  late final _cv_Mat_flags =
      _cv_Mat_flagsPtr.asFunction<int Function(Mat)>(isLeaf: true);

  ffi.Pointer<Vec2b> cv_Mat_get_Vec2b(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec2b(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec2bPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec2b> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec2b');
  late final _cv_Mat_get_Vec2b = _cv_Mat_get_Vec2bPtr
      .asFunction<ffi.Pointer<Vec2b> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec2d> cv_Mat_get_Vec2d(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec2d(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec2dPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec2d> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec2d');
  late final _cv_Mat_get_Vec2d = _cv_Mat_get_Vec2dPtr
      .asFunction<ffi.Pointer<Vec2d> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec2f> cv_Mat_get_Vec2f(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec2f(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec2fPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec2f> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec2f');
  late final _cv_Mat_get_Vec2f = _cv_Mat_get_Vec2fPtr
      .asFunction<ffi.Pointer<Vec2f> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec2i> cv_Mat_get_Vec2i(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec2i(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec2iPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec2i> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec2i');
  late final _cv_Mat_get_Vec2i = _cv_Mat_get_Vec2iPtr
      .asFunction<ffi.Pointer<Vec2i> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec2s> cv_Mat_get_Vec2s(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec2s(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec2sPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec2s> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec2s');
  late final _cv_Mat_get_Vec2s = _cv_Mat_get_Vec2sPtr
      .asFunction<ffi.Pointer<Vec2s> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec2w> cv_Mat_get_Vec2w(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec2w(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec2wPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec2w> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec2w');
  late final _cv_Mat_get_Vec2w = _cv_Mat_get_Vec2wPtr
      .asFunction<ffi.Pointer<Vec2w> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec3b> cv_Mat_get_Vec3b(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec3b(
      self,
      i0,
      i1,
    );
  }
